--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -1,5 +1,5 @@
 <%= simple_form_for @project do |f| %>
-	<%= f.input :name %>
+	<%= f.input :name, input_html: {value: @project.name} %>
 	<%= f.input :user, :as => :hidden, :input_html => {:value => current_user.id} %>
 	<%= f.submit "Submit" %>
 <% end %>
